# Filament_2

./: README.md  ambiguity_questions.md  docs_mapping.md  pyproject.toml  requirements.txt  sub.sh
configs/: README.md  isaacs2022_single_120fs.yaml  isaacs2022_single_40fs.yaml
references/: README.md
references/pdfs/: README.md
scripts/: README.md  plot_isaacs2022_singlepulse.py  run_case.py
src/: README.md
src/filament/: README.md  __init__.py  backend.py  constants.py  grid.py  lens.py  pulse.py  units.py
src/filament/diagnostics/: README.md  check_energy.py  electron_density.py  fluence.py  intensity.py
src/filament/ionization/: README.md  model_selector.py  popruzhenko2008.py  talebpour1999.py
src/filament/materials/: README.md  air.py  species.py
src/filament/nonlinear/: README.md  kerr.py  raman.py
src/filament/plasma/: README.md  free_electron.py  ionization_damping.py  plasma_update.py  rk4.py
src/filament/propagation/: README.md  linear_operator.py  nee_solver.py  nonlinear_operator.py  stepper.py
src/filament/utils/: README.md  io.py
tests/: README.md  test_backend_consistency.py  test_ionization.py  test_operator_stability.py  test_plasma.py  test_units.py
