[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filament"
version = "0.1.0"
description = "Single-pulse ultrashort filamentation scaffold"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10", "pyyaml>=6.0", "matplotlib>=3.7", "h5py>=3.8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
